feat(logo): update logo component to use new image and adjust styles

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://ik.imagekit.io/00zfvrear/profile-pictures/WhatsApp%20Image%202025-09-10%20at%2021.42.49.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rivo || Play for All</title>
   </head>
